v0.12.2 - blind mode tournament fix, remaining policies gamechat reveal @ endgame, replaced perfectscrollbar with react-custom-scrollbars

--- a/src/scss/style-dark.scss
+++ b/src/scss/style-dark.scss
@@ -33,7 +33,6 @@ $headerfont: inherit; //'Comfortaa', Lato, sans-serif;
 @import 'moderation.scss';
 @import 'game-text.scss';
 @import 'reports.scss';
-@import 'perfect-scrollbar.scss';
 
 @media screen and (min-width: 1920px) {
 	.body-container {
@@ -226,9 +225,6 @@ $headerfont: inherit; //'Comfortaa', Lato, sans-serif;
 			// small hack to prevent hover tooltips being cut off.
 			margin-right: -50px;
 			padding-right: 50px;
-			.ps__scrollbar-y-rail {
-				right: 50px;
-			}
 		}
 		.section-main-content-container {
 			width: 870px;
@@ -277,20 +273,20 @@ $headerfont: inherit; //'Comfortaa', Lato, sans-serif;
 
 		h4 {
 			margin-bottom: 2px;
-    }
-    
-    .season-text {
-      position: absolute;
-      top: 25px;
-      left: 470px;
-      width: 150px;
-      font-size: 12px;
-      color: $hitlerteam;
-      cursor: default;
-    }
+		}
+
+		.season-text {
+			position: absolute;
+			top: 25px;
+			left: 470px;
+			width: 150px;
+			font-size: 12px;
+			color: $hitlerteam;
+			cursor: default;
+		}
 
 		> a > h5 {
-      font-style: italic;
+			font-style: italic;
 			text-align: center;
 			position: absolute;
 			left: 10px;
